--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.Rothko" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.App.Rothko" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,8 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/black</item>
 
         <item name="textAppearanceHeadline6">@style/TextAppearance.Rothko.Headline6</item>
         <item name="textAppearanceHeadline5">@style/TextAppearance.Rothko.Headline5</item>
@@ -29,4 +28,6 @@
 
         <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.Rothko.LargeComponent</item>
     </style>
+
+    <style name="Theme.Rothko" parent="Base.App.Rothko" />
 </resources>
