--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -18,6 +18,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
+        app:labelVisibilityMode="unlabeled"
         android:layout_height="wrap_content"
         app:menu="@menu/bottom_nav" />
 </LinearLayout>
